fixes to photo alignments

--- a/src/pages/styles/index.scss
+++ b/src/pages/styles/index.scss
@@ -62,10 +62,10 @@ p {
       margin-top: 1rem;
       max-width: 375px;
     }
-    img {
-      width: 350px;
-      height: 250px;
-    }
+    // img {
+    //   width: 330px;
+    //   height: 250px;
+    // }
   }
   .photoDivider {
     height: 40vh;
@@ -79,6 +79,11 @@ p {
   #heroPhotoSection {
     margin: 6rem 1rem;
     text-align: center;
+    .optionSection {
+      p {
+        margin-top: 1rem;
+      }
+    }
     h1 {
       font-size: 1.5rem;
     }
